--- a/style.css
+++ b/style.css
@@ -131,3 +131,9 @@
   box-shadow: 0 1px px rgba(0, 0, 0, 0.1);
   color: #222;
 }
+.btn:hover {
+  background-image: linear-gradient(top, #f8f8f8, #f1f1f1);
+  border: 1px solid #c6c6c6;
+  box-shadow: 0 1px px rgba(0, 0, 0, 0.1);
+  color: #222;
+}
