--- a/style.css
+++ b/style.css
@@ -3,137 +3,106 @@
   padding: 0;
   box-sizing: border-box;
   text-transform: capitalize;
-  color:#737373;
-}
-.material-icons {
-  color:#737373;
 }
 
-.user-img {
-  width: 32px;
-  border-radius: 50%;
-}
-
-
-.nav-bar {
-  float: right;
-  width: 200px;
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  align-items: center;
-  margin: 15px;
-  font-size: 14px;
-}
-
-.nav-bar i {
- cursor: pointer;
-}
-
-.nav-bar img {
-  cursor: pointer;
-  margin-right: 5px;
- }
-.nav-bar i:hover {
-  color: black;
- }
-
-.nav-bar a {
+a {
   text-decoration: none;
   color: #2f373d;
 }
 
-.nav-bar a:hover {
+a:hover {
   text-decoration-line: underline;
 }
 
-.main-section {
-  display: inline-block;
-  width: 100%;
-  height: 500px;
-  position: relative;
+.nav-bar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 10vh;
+  color: #70767a;
+  padding-right: 1rem;
+}
+.nav-bar i {
+  color: #70767a;
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 5px;
+}
+.nav-bar i:hover {
+  background-color: #e8ebec;
+}
+.nav-bar > *{
+  margin: 0.3rem;
 }
 
+.nav-bar img{
+ border-radius: 50%;
+ width: 2rem;
+ height: 2rem; 
+ cursor: pointer;
+}
 
-.google {
-  margin: 0;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.main-section {
+height: 90vh;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding-bottom: 5rem;
 }
 
 #input-wrapper {
-  width: 80%;
-  max-width: 500px;
-  display: inline-block;
-  height: 100px;
-  position: absolute;
-  top: 250px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
   position: relative;
-  margin-top: 20px; 
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-
 .search-box {
-  width: 100%;
+  width: 30rem;
   color: #222;
   border: 1px solid #dfe1e5;
-  font-size: 13px;
-  padding: 14px;
-  border-radius: 24px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  border-radius: 2rem;
   outline: none;
   box-shadow:0 1px 6px 0 rgba(32, 33, 36, 0.28) ;
-  border-color:0 1px 6px 0 rgba(223,225,229, 0) ; 
-  
+  border-color:0 1px 6px 0 rgba(223,225,229, 0) ;
+  padding: 0.8rem; 
+  padding-left: 3rem;
 }
 
-.microphone {
-  float: right;
-  width: 32px;
+.microphone,
+.fa-search {
   position: absolute;
-  right: 20px;
-  top: 5px;
   cursor: pointer;
 }
-
-.btns {
-  width: 100%;
-  max-width: 500px;
-  height: 100px;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin-top: -40px;
+.microphone {
+  top: 0.5rem;
+  right: 0.5rem;
+  width: 1.5rem;
+}
+.fa-search {
+  top: 0.8rem;
+  left: 1rem;
+  color: #70767a;
 }
 
+
 .btn {
-  transform: translateX(100%);
-  margin: 50px 0  0 0 ;
   background-color: #f2f2f2;
   color: #5f6368;
   font-size: 14px;
   height: 36px;
   padding: 0 16px;
-  background-image: linear-gradient(top, #f5f5f5,#f1f1f1 );
   border: 1px solid transparent;
   box-shadow: 0 1px 1px rgba(0, 0,0, 0);
   color: #222;
   cursor: pointer;
   outline: none;
-}
-
-.btn:hover {
-  background-image: linear-gradient(top, #f8f8f8, #f1f1f1);
-  border: 1px solid #c6c6c6;
-  box-shadow: 0 1px px rgba(0, 0, 0, 0.1);
-  color: #222;
+  margin-left: 1rem;
 }
 .btn:hover {
-  background-image: linear-gradient(top, #f8f8f8, #f1f1f1);
   border: 1px solid #c6c6c6;
   box-shadow: 0 1px px rgba(0, 0, 0, 0.1);
-  color: #222;
+  color: #2f373d;
 }
